# baker

ipa_wet_cleaning_streak_detection/: CMakeLists.txt  package.xml
ipa_wet_cleaning_streak_detection/common/src/: timer.cpp
ipa_wet_cleaning_streak_detection/ros/include/ipa_wet_cleaning_streak_detection/: wet_cleaning_streak_detection.h
ipa_wet_cleaning_streak_detection/ros/launch/: wet_cleaning_streak_detection.launch  wet_cleaning_streak_detection_params.yaml
ipa_wet_cleaning_streak_detection/ros/src/: wet_cleaning_streak_detection.cpp
