<?xml version="1.0"?>
<package format="2">
	<name>ipa_wet_cleaning_streak_detection</name>
	<version>0.1.0</version>
	<description>
		This component is part of the cleaning scenario of the BakeR project. It provides an algorithm for streak detection from the wet cleaner at the floor.
	</description>
	<author email="uriel.jost@ipa.fraunhofer.de">Uriel Jost</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>Free for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
	<url>http://ros.org/wiki/ipa_dirt_detection</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>boost</depend>
	<depend>cv_bridge</depend>
	<depend>image_transport</depend>
	<depend>libopencv-dev</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>

</package>
